Se añadió favicon
Se está continuando reparar las imagenes, sigo en prueba

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/Newsletter-Subscription-Form.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/Testimonials.css">
+    <link rel="icon" href="assets/img/favicon.ico"/>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand navbar-link" href="index.html"><img src="assets/img/youman letras.png" alt="YouMan"></a>
-                    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Navegación</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
@@ -45,28 +46,28 @@
             </div>
             <div class="row photos" data-aos="fade-up">
                 <div class="col-lg-3 col-md-4 col-sm-6 item">
-                    <img class="img-responsive" src="assets/img/youtubers/werevertumorro.png" style="height:250px;background-position:center;background-size:350px;">
+                    <a href="desk.jpg" data-lightbox="photos"><img class="img-responsive" src="assets/img/youtubers/werevertumorro.png" style="background-image:url(&quot;assets/img/youtubers/werevertumorro.png&quot;);height:250px;background-position:center;background-size:350px;"></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 item">
-                    <img class="img-responsive" src="assets/img/youtubers/sebastian_villalobos_instagram_2.jpg" style="height:250px;background-position:center;background-size:380px;">
+                    <a href="building.jpg" data-lightbox="photos"><img class="img-responsive" src="assets/img/youtubers/sebastian_villalobos_instagram_2.jpg" style="background-image:url(&quot;assets/img/youtubers/sebastian_villalobos_instagram_2.jpg&quot;);height:250px;background-position:center;background-size:380px;"></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 item">
-                    <img class="img-responsive" src="assets/img/youtubers/yuya.jpg" style="height:250px;width:200px;background-position:center;background-size:380px;">
+                    <a href="loft.jpg" data-lightbox="photos"><img class="img-responsive" src="assets/img/youtubers/yuya.jpg" style="background-image:url(&quot;assets/img/youtubers/yuya.jpg&quot;);height:250px;background-position:center;background-size:380px;"></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 item">
-                    <img class="img-responsive" src="assets/img/youtubers/luisito_comunica.jpg" style="height:250px;background-position:center;background-size:380px;">
+                    <a href="building.jpg" data-lightbox="photos"><img class="img-responsive" src="assets/img/youtubers/luisito_comunica.jpg" style="background-image:url(&quot;assets/img/youtubers/luisito_comunica.jpg&quot;);height:250px;background-position:center;background-size:380px;"></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 item">
-                    <img class="img-responsive" src="assets/img/youtubers/tatanymaleja.jpg" style="height:250px;background-position:center;background-size:340px;">
+                    <a href="loft.jpg" data-lightbox="photos"><img class="img-responsive" src="assets/img/youtubers/tatanymaleja.jpg" style="background-image:url(&quot;assets/img/youtubers/tatanymaleja.jpg&quot;);height:250px;background-position:center;background-size:340px;width:250px;"></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 item">
-                    <img class="img-responsive" src="assets/img/youtubers/alanxelmundo.jpg" style="height:250px;background-position:center;background-size:320px;">
+                    <a href="desk.jpg" data-lightbox="photos"><img class="img-responsive" src="assets/img/youtubers/alanxelmundo.jpg" style="background-image:url(&quot;assets/img/youtubers/alanxelmundo.jpg&quot;);height:250px;background-position:center;background-size:320px;"></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 item">
-                    <img class="img-responsive" src="assets/img/youtubers/vegetta777.png" style="height:250px;background-position:center;background-size:320px;">
+                    <a href="desk.jpg" data-lightbox="photos"><img class="img-responsive" src="assets/img/youtubers/vegetta777.png" style="background-image:url(&quot;assets/img/youtubers/vegetta777.png&quot;);height:250px;background-position:center;background-size:320px;"></a>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 item">
-                    <img class="img-responsive" src="assets/img/youtubers/elrincondegiorgio.png" style="height:250px;background-position:center;background-size:320px;">
+                    <a href="desk.jpg" data-lightbox="photos"><img class="img-responsive" src="assets/img/youtubers/elrincondegiorgio.png" style="background-image:url(&quot;assets/img/youtubers/elrincondegiorgio.png&quot;);height:250px;background-position:center;background-size:320px;"></a>
                 </div>
                 <div class="col-md-12">
                     <div></div>
@@ -84,7 +85,7 @@
                         <p class="description">Yo tengo mis clientes pero quería llegar a más personas debido a que mi ciudad es muy grande, en solo minutos solicite apoyo&nbsp;de YouMan y ahora mucha gente sigue conoce mi negocio.</p>
                     </div>
                     <div class="author"><img class="img-circle" src="assets/img/1.jpg">
-                        <h5 class="name">Camilo Cifuentes</h5>
+                        <h5 class="name">Camilo Cifuentes </h5>
                         <p class="title">CEO of Company Inc.</p>
                     </div>
                 </div>
@@ -93,7 +94,7 @@
                         <p class="description"> Mi negocio ha crecido desde que YouMan empezó a influenciar mi negocio y se encarga de mis redes sociales, todo ha mejorado.</p>
                     </div>
                     <div class="author"><img class="img-circle" src="assets/img/3.jpg">
-                        <h5 class="name">Sebastián Fuentes</h5>
+                        <h5 class="name">Sebastián Fuentes </h5>
                         <p class="title">Founder of Style Co.</p>
                     </div>
                 </div>
@@ -102,7 +103,7 @@
                         <p class="description">Mis productos son muy conocidos, pero queria que llegaran a más personas, contacté a YouMan y un youtuber promociono mi negocio. Es asombroso!.</p>
                     </div>
                     <div class="author"><img class="img-circle" src="assets/img/2.jpg">
-                        <h5 class="name">Johana Espítia</h5>
+                        <h5 class="name">Johana Espítia </h5>
                         <p class="title">Owner of Creative Ltd.</p>
                     </div>
                 </div>
