--- a/nosotros.html
+++ b/nosotros.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="assets/css/Newsletter-Subscription-Form.css">
     <link rel="stylesheet" href="assets/css/styles.css">
     <link rel="stylesheet" href="assets/css/Testimonials.css">
+    <link rel="icon" href="assets/img/favicon.ico"/>
 </head>
 
 <body>
@@ -24,7 +25,7 @@
             <div class="container">
                 <div class="navbar-header">
                     <a class="navbar-brand navbar-link" href="index.html"><img src="assets/img/youman letras.png" alt="YouMan"></a>
-                    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
+                    <button class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navcol-1"><span class="sr-only">Navegación</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span></button>
                 </div>
                 <div class="collapse navbar-collapse" id="navcol-1">
                     <ul class="nav navbar-nav navbar-right">
