--- a/nosotros.html
+++ b/nosotros.html
@@ -37,7 +37,7 @@
             </div>
         </nav>
     </div>
-    <div style="height:730px;background-image:url(&quot;assets/img/Nosotros.jpg&quot;);background-position:center;background-size:cover;"></div>
+    <div style="margin-top:-150px;height:730px;background-image:url(&quot;assets/img/Nosotros.jpg&quot;);background-position:center;background-size:cover;"></div>
     <div data-aos="fade-up" class="newsletter-subscribe">
         <div class="container">
             <div class="intro">
